added h2 as example

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <h1 class="header">Hello, there!</h1>
+        <h2 class ="ex">This is a test test. </h2>
 
         <script src="index.js"></script>
     </body>
